[package]
name = "max-mx2-open"
version = "0.1.0"
edition = "2021"

[dependencies]
# Argon2id per derivare la chiave dalla password
argon2 = { version = "0.5", features = ["std"] }

# XChaCha20-Poly1305 (MX2)
chacha20poly1305 = { version = "0.10" }

# Random sicuro (OsRng, shuffle, ecc.)
rand = "0.8"

# Codifica base64 per il pacchetto MX2:pc:v1
base64 = "0.21"

# JSON per il payload MAXREC (p1/p2)
serde_json = "1"

# SHA-256 per derivare i due passcode dalla password (come in Swift)
sha2 = "0.10"
